Ultima Modificación/simple.output
State 113 conflicts: 13 reduce/reduce
State 195 conflicts: 8 reduce/reduce
State 280 conflicts: 1 reduce/reduce
State 353 conflicts: 14 reduce/reduce


Grammar

    0 $accept: programa $end

    1 programa: definicion_programa
    2         | definicion_libreria

    3 definicion_programa: PROGRAMA IDENTIFICADOR ';' codigo_programa
    4                    | error ';'

    5 codigo_programa: cuerpo_subprograma
    6                | librerias cuerpo_subprograma

    7 librerias: libreria
    8          | librerias libreria

    9 libreria: IMPORTAR LIBRERIA nombre ';'
   10         | IMPORTAR LIBRERIA nombre COMO IDENTIFICADOR ';'
   11         | DE LIBRERIA nombre IMPORTAR identificadores ';'

   12 nombre: IDENTIFICADOR
   13       | nombre CUATRO_PUNTOS IDENTIFICADOR

   14 nombres: nombre
   15        | nombres ',' nombre

   16 definicion_libreria: LIBRERIA IDENTIFICADOR ';' codigo_libreria

   17 codigo_libreria: declaraciones
   18                | exportaciones declaraciones
   19                | librerias declaraciones
   20                | librerias exportaciones declaraciones
   21                | error ';'

   22 exportaciones: EXPORTAR nombres ';'

   23 declaracion: declaracion_objeto
   24            | declaracion_tipo
   25            | declaracion_subprograma

   26 declaraciones: declaracion
   27              | declaraciones declaracion

   28 declaracion_objeto: identificadores ':' CONSTANTE especificacion_tipo ASIGNACION expresion ';'
   29                   | identificadores ':' especificacion_tipo ASIGNACION expresion ';'

   30 especificacion_tipo: nombre
   31                    | tipo_no_estructurado

   32 declaracion_tipo: TIPO IDENTIFICADOR ES tipo_no_estructurado ';'
   33                 | TIPO IDENTIFICADOR ES tipo_estructurado

   34 tipo_no_estructurado: tipo_escalar
   35                     | tipo_tabla
   36                     | tipo_diccionario
   37                     | error ';'

   38 tipo_escalar: tipo_basico
   39             | SIGNO tipo_basico
   40             | tipo_basico longitud
   41             | tipo_basico RANGO rango
   42             | SIGNO tipo_basico longitud
   43             | tipo_basico longitud RANGO rango
   44             | SIGNO tipo_basico RANGO rango
   45             | SIGNO tipo_basico longitud RANGO rango
   46             | error ';'

   47 longitud: CORTO
   48         | LARGO

   49 tipo_basico: BOOLEANO
   50            | CARACTER
   51            | ENTERO
   52            | REAL

   53 rango: expresion DOS_PUNTOS expresion
   54      | expresion DOS_PUNTOS expresion DOS_PUNTOS expresion

   55 tipo_tabla: TABLA '(' expresion DOS_PUNTOS expresion ')' DE especificacion_tipo
   56           | LISTA DE especificacion_tipo

   57 tipo_diccionario: DICCIONARIO DE especificacion_tipo

   58 tipo_estructurado: tipo_registro
   59                  | tipo_enumerado
   60                  | clase

   61 tipo_registro: REGISTRO campos FIN REGISTRO

   62 campo: identificadores ':' especificacion_tipo ';'
   63      | identificadores ':' especificacion_tipo ASIGNACION expresion ';'

   64 campos: campo
   65       | campos campo

   66 tipo_enumerado: ENUMERACION elementos_enumeracion FIN ENUMERACION
   67               | ENUMERACION DE tipo_escalar elementos_enumeracion FIN ENUMERACION

   68 elemento_enumeracion: IDENTIFICADOR
   69                     | IDENTIFICADOR ASIGNACION expresion

   70 elementos_enumeracion: elemento_enumeracion
   71                      | elementos_enumeracion elemento_enumeracion

   72 clase: CLASE declaracion_componentes FIN CLASE
   73      | CLASE ULTIMA declaracion_componentes FIN CLASE
   74      | CLASE superclases declaracion_componentes FIN CLASE
   75      | CLASE ULTIMA superclases declaracion_componente FIN CLASE
   76      | error ';'

   77 superclases: '(' nombres ')'

   78 declaracion_componentes: declaracion_componente
   79                        | declaracion_componentes declaracion_componente

   80 declaracion_componente: componente
   81                       | visibilidad componente

   82 visibilidad: PUBLICO
   83            | PROTEGIDO
   84            | PRIVADO

   85 componente: declaracion_tipo
   86           | declaracion_objeto
   87           | modificadores declaracion_subprograma

   88 modificador: CONSTRUCTOR
   89            | DESTRUCTOR
   90            | GENERICO
   91            | ABSTRACTO
   92            | ESPECIFICO
   93            | FINAL
   94            | error ';'

   95 modificadores: modificador
   96              | modificadores ',' modificador

   97 declaracion_subprograma: SUBPROGRAMA cabecera_subprograma cuerpo_subprograma SUBPROGRAMA

   98 cabecera_subprograma: IDENTIFICADOR
   99                     | IDENTIFICADOR parametrizacion
  100                     | IDENTIFICADOR tipo_resultado
  101                     | IDENTIFICADOR parametrizacion tipo_resultado
  102                     | error ';'

  103 parametrizacion: '(' declaracion_parametros ')'
  104                | '(' declaracion_parametros ';' declaracion_parametros ')'

  105 declaracion_parametros: identificadores ':' especificacion_tipo
  106                       | identificadores ':' modo especificacion_tipo
  107                       | identificadores ':' especificacion_tipo ASIGNACION expresion
  108                       | identificadores ':' modo especificacion_tipo ASIGNACION expresion
  109                       | error ';'

  110 identificadores: IDENTIFICADOR
  111                | identificadores ',' IDENTIFICADOR

  112 modo: VALOR
  113     | REFERENCIA

  114 tipo_resultado: DEVOLVER especificacion_tipo

  115 cuerpo_subprograma: PRINCIPIO bloque_instrucciones FIN
  116                   | declaraciones PRINCIPIO bloque_instrucciones FIN

  117 bloque_instrucciones: instruccion
  118                     | bloque_instrucciones instruccion

  119 instruccion: ';'
  120            | instruccion_asignacion
  121            | instruccion_devolver
  122            | instruccion_llamada
  123            | instruccion_si
  124            | instruccion_casos
  125            | instruccion_bucle
  126            | instruccion_interrupcion
  127            | instruccion_lanzamiento_excepcion
  128            | instruccion_captura_excepcion
  129            | error ';'

  130 instruccion_asignacion: objeto op_asignacion expresion ';'

  131 op_asignacion: ASIGNACION
  132              | ASIG_SUMA
  133              | ASIG_RESTA
  134              | ASIG_MULT
  135              | ASIG_DIV
  136              | ASIG_POT
  137              | ASIG_RESTO
  138              | ASIG_DESPI
  139              | ASIG_DESPD

  140 instruccion_devolver: DEVOLVER ';'
  141                     | DEVOLVER expresion ';'

  142 instruccion_llamada: llamada_subprograma ';'

  143 llamada_subprograma: nombre '(' ')'
  144                    | nombre '(' definicion_parametros ')'

  145 definicion_parametros: definicion_parametro
  146                      | definicion_parametros ',' definicion_parametro

  147 definicion_parametro: expresion
  148                     | IDENTIFICADOR ASIGNACION expresion

  149 instruccion_si: SI expresion ENTONCES bloque_instrucciones FIN SI
  150               | SI expresion ENTONCES bloque_instrucciones SINO bloque_instrucciones FIN SI

  151 instruccion_casos: CASOS expresion ES casos FIN CASOS ';'

  152 casos: caso
  153      | casos caso

  154 caso: CUANDO entradas FLECHA bloque_instrucciones

  155 entradas: entrada
  156         | entradas ':' entrada

  157 entrada: expresion
  158        | expresion DOS_PUNTOS expresion
  159        | OTRO

  160 instruccion_bucle: clausula_iteracion bloque_instrucciones FIN BUCLE
  161                  | IDENTIFICADOR ':' clausula_iteracion bloque_instrucciones FIN BUCLE

  162 clausulas_iteraciones: clausula_iteracion
  163                      | clausulas_iteraciones clausula_iteracion

  164 clausula_iteracion: PARA IDENTIFICADOR EN expresion
  165                   | PARA IDENTIFICADOR ':' especificacion_tipo EN expresion
  166                   | REPETIR IDENTIFICADOR EN RANGO
  167                   | REPETIR IDENTIFICADOR ':' especificacion_tipo EN RANGO
  168                   | REPETIR IDENTIFICADOR EN RANGO DESCENDENTE
  169                   | REPETIR IDENTIFICADOR ':' especificacion_tipo EN RANGO DESCENDENTE
  170                   | MIENTRAS expresion
  171                   | error ';'

  172 instruccion_interrupcion: SIGUIENTE ';'
  173                         | SIGUIENTE CUANDO ';'
  174                         | SALIR ';'
  175                         | SALIR DE IDENTIFICADOR ';'
  176                         | SALIR CUANDO ';'
  177                         | SALIR DE IDENTIFICADOR CUANDO ';'

  178 instruccion_lanzamiento_excepcion: LANZA nombre ';'

  179 instruccion_captura_excepcion: PRUEBA bloque_instrucciones clausulas FIN PRUEBA

  180 clausulas: clausulas_excepcion
  181          | clausulas clausula_finalmente
  182          | clausula_finalmente

  183 clausulas_excepcion: clausula_excepcion_general
  184                    | clausula_excepcion_especifica clausula_excepcion_general
  185                    | error ';'

  186 clausula_excepcion_especifica: EXCEPCION '(' nombre ')' bloque_instrucciones

  187 clausula_excepcion_general: EXCEPCION bloque_instrucciones

  188 clausula_finalmente: FINALMENTE bloque_instrucciones

  189 expres: expresion
  190       | expres ',' expresion

  191 expresion: expresion1

  192 expresion1: expresion1 OR expresion2
  193           | expresion2

  194 expresion2: expresion2 AND expresion3
  195           | expresion3

  196 expresion3: '~' expresion4
  197           | expresion4

  198 expresion4: expresion4 '<' expresion5
  199           | expresion4 '>' expresion5
  200           | expresion4 LEQ expresion5
  201           | expresion4 GEQ expresion5
  202           | expresion4 '=' expresion5
  203           | expresion4 NEQ expresion5
  204           | expresion5

  205 expresion5: expresion5 DESPI expresion6
  206           | expresion5 DESPD expresion6
  207           | expresion6

  208 expresion6: expresion6 '+' expresion7
  209           | expresion6 '-' expresion7
  210           | expresion7

  211 expresion7: expresion7 '*' expresion_potencia
  212           | expresion7 '/' expresion_potencia
  213           | expresion7 '\\' expresion_potencia
  214           | expresion_potencia

  215 expresion_potencia: expresion_posfija '^' expresion_potencia
  216                   | expresion_posfija

  217 expresion_posfija: expresion_unaria operador_posfijo
  218                  | expresion_unaria

  219 operador_posfijo: INC
  220                 | DEC

  221 expresion_unaria: '-' primario
  222                 | primario

  223 primario: literal
  224         | objeto
  225         | OBJETO llamada_subprograma
  226         | llamada_subprograma
  227         | enumeraciones
  228         | '(' expresion ')'

  229 literal: VERDADERO
  230        | FALSO
  231        | CTC_ENTERA
  232        | CTC_REAL
  233        | CTC_CARACTER
  234        | CTC_CADENA

  235 objeto: nombre
  236       | objeto '.' IDENTIFICADOR
  237       | objeto '[' expres ']'
  238       | objeto '{' ctc_cadenas '}'

  239 enumeraciones: '[' expresion_condicional clausulas_iteraciones ']'
  240              | '[' expres ']'
  241              | '{' claves_valor '}'
  242              | '{' campos_valor '}'

  243 expresion_condicional: expresion
  244                      | SI expresion ENTONCES expresion
  245                      | SI expresion ENTONCES expresion SINO expresion

  246 claves_valor: clave_valor
  247             | claves_valor ',' clave_valor

  248 campos_valor: campo_valor
  249             | campos_valor ',' campo_valor

  250 ctc_cadenas: CTC_CADENA
  251            | ctc_cadenas ',' CTC_CADENA

  252 clave_valor: CTC_CADENA FLECHA expresion

  253 campo_valor: IDENTIFICADOR FLECHA expresion


Terminals, with rules where they appear

$end (0) 0
'(' (40) 55 77 103 104 143 144 186 228
')' (41) 55 77 103 104 143 144 186 228
'*' (42) 211
'+' (43) 208
',' (44) 15 96 111 146 190 247 249 251
'-' (45) 209 221
'.' (46) 236
'/' (47) 212
':' (58) 28 29 62 63 105 106 107 108 156 161 165 167 169
';' (59) 3 4 9 10 11 16 21 22 28 29 32 37 46 62 63 76 94 102 104 109
    119 129 130 140 141 142 151 171 172 173 174 175 176 177 178 185
'<' (60) 198
'=' (61) 202
'>' (62) 199
'[' (91) 237 239 240
'\\' (92) 213
']' (93) 237 239 240
'^' (94) 215
'{' (123) 238 241 242
'}' (125) 238 241 242
'~' (126) 196
error (256) 4 21 37 46 76 94 102 109 129 171 185
ABSTRACTO (258) 91
BOOLEANO (259) 49
BUCLE (260) 160 161
CARACTER (261) 50
CASOS (262) 151
CLASE (263) 72 73 74 75
COMO (264) 10
CONSTANTE (265) 28
CONSTRUCTOR (266) 88
CORTO (267) 47
CUANDO (268) 154 173 176 177
DE (269) 11 55 56 57 67 175 177
DESCENDENTE (270) 168 169
DESTRUCTOR (271) 89
DEVOLVER (272) 114 140 141
DICCIONARIO (273) 57
EN (274) 164 165 166 167 168 169
ENTERO (275) 51
ENTONCES (276) 149 150 244 245
ENUMERACION (277) 66 67
ES (278) 32 33 151
ESPECIFICO (279) 92
EXCEPCION (280) 186 187
EXPORTAR (281) 22
FALSO (282) 230
FIN (283) 61 66 67 72 73 74 75 115 116 149 150 151 160 161 179
FINAL (284) 93
FINALMENTE (285) 188
GENERICO (286) 90
IMPORTAR (287) 9 10 11
LARGO (288) 48
LANZA (289) 178
LIBRERIA (290) 9 10 11 16
LISTA (291) 56
MIENTRAS (292) 170
OBJETO (293) 225
OTRO (294) 159
PARA (295) 164 165
PRINCIPIO (296) 115 116
PRIVADO (297) 84
PROGRAMA (298) 3
PROTEGIDO (299) 83
PRUEBA (300) 179
PUBLICO (301) 82
RANGO (302) 41 43 44 45 166 167 168 169
REAL (303) 52
REFERENCIA (304) 113
REGISTRO (305) 61
REPETIR (306) 166 167 168 169
SALIR (307) 174 175 176 177
SI (308) 149 150 244 245
SIGNO (309) 39 42 44 45
SIGUIENTE (310) 172 173
SINO (311) 150 245
SUBPROGRAMA (312) 97
TABLA (313) 55
TIPO (314) 32 33
ULTIMA (315) 73 75
VALOR (316) 112
VERDADERO (317) 229
CTC_CARACTER (318) 233
CTC_CADENA (319) 234 250 251 252
IDENTIFICADOR (320) 3 10 12 13 16 32 33 68 69 98 99 100 101 110 111
    148 161 164 165 166 167 168 169 175 177 236 253
CTC_ENTERA (321) 231
CTC_REAL (322) 232
DOS_PUNTOS (323) 53 54 55 158
CUATRO_PUNTOS (324) 13
ASIGNACION (325) 28 29 63 69 107 108 131 148
FLECHA (326) 154 252 253
INC (327) 219
DEC (328) 220
DESPI (329) 205
DESPD (330) 206
LEQ (331) 200
GEQ (332) 201
NEQ (333) 203
AND (334) 194
OR (335) 192
ASIG_SUMA (336) 132
ASIG_RESTA (337) 133
ASIG_MULT (338) 134
ASIG_DIV (339) 135
ASIG_RESTO (340) 137
ASIG_POT (341) 136
ASIG_DESPI (342) 138
ASIG_DESPD (343) 139


Nonterminals, with rules where they appear

$accept (109)
    on left: 0
programa (110)
    on left: 1 2, on right: 0
definicion_programa (111)
    on left: 3 4, on right: 1
codigo_programa (112)
    on left: 5 6, on right: 3
librerias (113)
    on left: 7 8, on right: 6 8 19 20
libreria (114)
    on left: 9 10 11, on right: 7 8
nombre (115)
    on left: 12 13, on right: 9 10 11 13 14 15 30 143 144 178 186 235
nombres (116)
    on left: 14 15, on right: 15 22 77
definicion_libreria (117)
    on left: 16, on right: 2
codigo_libreria (118)
    on left: 17 18 19 20 21, on right: 16
exportaciones (119)
    on left: 22, on right: 18 20
declaracion (120)
    on left: 23 24 25, on right: 26 27
declaraciones (121)
    on left: 26 27, on right: 17 18 19 20 27 116
declaracion_objeto (122)
    on left: 28 29, on right: 23 86
especificacion_tipo (123)
    on left: 30 31, on right: 28 29 55 56 57 62 63 105 106 107 108
    114 165 167 169
declaracion_tipo (124)
    on left: 32 33, on right: 24 85
tipo_no_estructurado (125)
    on left: 34 35 36 37, on right: 31 32
tipo_escalar (126)
    on left: 38 39 40 41 42 43 44 45 46, on right: 34 67
longitud (127)
    on left: 47 48, on right: 40 42 43 45
tipo_basico (128)
    on left: 49 50 51 52, on right: 38 39 40 41 42 43 44 45
rango (129)
    on left: 53 54, on right: 41 43 44 45
tipo_tabla (130)
    on left: 55 56, on right: 35
tipo_diccionario (131)
    on left: 57, on right: 36
tipo_estructurado (132)
    on left: 58 59 60, on right: 33
tipo_registro (133)
    on left: 61, on right: 58
campo (134)
    on left: 62 63, on right: 64 65
campos (135)
    on left: 64 65, on right: 61 65
tipo_enumerado (136)
    on left: 66 67, on right: 59
elemento_enumeracion (137)
    on left: 68 69, on right: 70 71
elementos_enumeracion (138)
    on left: 70 71, on right: 66 67 71
clase (139)
    on left: 72 73 74 75 76, on right: 60
superclases (140)
    on left: 77, on right: 74 75
declaracion_componentes (141)
    on left: 78 79, on right: 72 73 74 79
declaracion_componente (142)
    on left: 80 81, on right: 75 78 79
visibilidad (143)
    on left: 82 83 84, on right: 81
componente (144)
    on left: 85 86 87, on right: 80 81
modificador (145)
    on left: 88 89 90 91 92 93 94, on right: 95 96
modificadores (146)
    on left: 95 96, on right: 87 96
declaracion_subprograma (147)
    on left: 97, on right: 25 87
cabecera_subprograma (148)
    on left: 98 99 100 101 102, on right: 97
parametrizacion (149)
    on left: 103 104, on right: 99 101
declaracion_parametros (150)
    on left: 105 106 107 108 109, on right: 103 104
identificadores (151)
    on left: 110 111, on right: 11 28 29 62 63 105 106 107 108 111
modo (152)
    on left: 112 113, on right: 106 108
tipo_resultado (153)
    on left: 114, on right: 100 101
cuerpo_subprograma (154)
    on left: 115 116, on right: 5 6 97
bloque_instrucciones (155)
    on left: 117 118, on right: 115 116 118 149 150 154 160 161 179
    186 187 188
instruccion (156)
    on left: 119 120 121 122 123 124 125 126 127 128 129, on right:
    117 118
instruccion_asignacion (157)
    on left: 130, on right: 120
op_asignacion (158)
    on left: 131 132 133 134 135 136 137 138 139, on right: 130
instruccion_devolver (159)
    on left: 140 141, on right: 121
instruccion_llamada (160)
    on left: 142, on right: 122
llamada_subprograma (161)
    on left: 143 144, on right: 142 225 226
definicion_parametros (162)
    on left: 145 146, on right: 144 146
definicion_parametro (163)
    on left: 147 148, on right: 145 146
instruccion_si (164)
    on left: 149 150, on right: 123
instruccion_casos (165)
    on left: 151, on right: 124
casos (166)
    on left: 152 153, on right: 151 153
caso (167)
    on left: 154, on right: 152 153
entradas (168)
    on left: 155 156, on right: 154 156
entrada (169)
    on left: 157 158 159, on right: 155 156
instruccion_bucle (170)
    on left: 160 161, on right: 125
clausulas_iteraciones (171)
    on left: 162 163, on right: 163 239
clausula_iteracion (172)
    on left: 164 165 166 167 168 169 170 171, on right: 160 161 162
    163
instruccion_interrupcion (173)
    on left: 172 173 174 175 176 177, on right: 126
instruccion_lanzamiento_excepcion (174)
    on left: 178, on right: 127
instruccion_captura_excepcion (175)
    on left: 179, on right: 128
clausulas (176)
    on left: 180 181 182, on right: 179 181
clausulas_excepcion (177)
    on left: 183 184 185, on right: 180
clausula_excepcion_especifica (178)
    on left: 186, on right: 184
clausula_excepcion_general (179)
    on left: 187, on right: 183 184
clausula_finalmente (180)
    on left: 188, on right: 181 182
expres (181)
    on left: 189 190, on right: 190 237 240
expresion (182)
    on left: 191, on right: 28 29 53 54 55 63 69 107 108 130 141 147
    148 149 150 151 157 158 164 165 170 189 190 228 243 244 245 252
    253
expresion1 (183)
    on left: 192 193, on right: 191 192
expresion2 (184)
    on left: 194 195, on right: 192 193 194
expresion3 (185)
    on left: 196 197, on right: 194 195
expresion4 (186)
    on left: 198 199 200 201 202 203 204, on right: 196 197 198 199
    200 201 202 203
expresion5 (187)
    on left: 205 206 207, on right: 198 199 200 201 202 203 204 205
    206
expresion6 (188)
    on left: 208 209 210, on right: 205 206 207 208 209
expresion7 (189)
    on left: 211 212 213 214, on right: 208 209 210 211 212 213
expresion_potencia (190)
    on left: 215 216, on right: 211 212 213 214 215
expresion_posfija (191)
    on left: 217 218, on right: 215 216
operador_posfijo (192)
    on left: 219 220, on right: 217
expresion_unaria (193)
    on left: 221 222, on right: 217 218
primario (194)
    on left: 223 224 225 226 227 228, on right: 221 222
literal (195)
    on left: 229 230 231 232 233 234, on right: 223
objeto (196)
    on left: 235 236 237 238, on right: 130 224 236 237 238
enumeraciones (197)
    on left: 239 240 241 242, on right: 227
expresion_condicional (198)
    on left: 243 244 245, on right: 239
claves_valor (199)
    on left: 246 247, on right: 241 247
campos_valor (200)
    on left: 248 249, on right: 242 249
ctc_cadenas (201)
    on left: 250 251, on right: 238 251
clave_valor (202)
    on left: 252, on right: 246 247
campo_valor (203)
    on left: 253, on right: 248 249


State 0

    0 $accept: . programa $end

    error     shift, and go to state 1
    LIBRERIA  shift, and go to state 2
    PROGRAMA  shift, and go to state 3

    programa             go to state 4
    definicion_programa  go to state 5
    definicion_libreria  go to state 6


State 1

    4 definicion_programa: error . ';'

    ';'  shift, and go to state 7


State 2

   16 definicion_libreria: LIBRERIA . IDENTIFICADOR ';' codigo_libreria

    IDENTIFICADOR  shift, and go to state 8


State 3

    3 definicion_programa: PROGRAMA . IDENTIFICADOR ';' codigo_programa

    IDENTIFICADOR  shift, and go to state 9


State 4

    0 $accept: programa . $end

    $end  shift, and go to state 10


State 5

    1 programa: definicion_programa .

    $default  reduce using rule 1 (programa)


State 6

    2 programa: definicion_libreria .

    $default  reduce using rule 2 (programa)


State 7

    4 definicion_programa: error ';' .

    $default  reduce using rule 4 (definicion_programa)


State 8

   16 definicion_libreria: LIBRERIA IDENTIFICADOR . ';' codigo_libreria

    ';'  shift, and go to state 11


State 9

    3 definicion_programa: PROGRAMA IDENTIFICADOR . ';' codigo_programa

    ';'  shift, and go to state 12


State 10

    0 $accept: programa $end .

    $default  accept


State 11

   16 definicion_libreria: LIBRERIA IDENTIFICADOR ';' . codigo_libreria

    error          shift, and go to state 13
    DE             shift, and go to state 14
    EXPORTAR       shift, and go to state 15
    IMPORTAR       shift, and go to state 16
    SUBPROGRAMA    shift, and go to state 17
    TIPO           shift, and go to state 18
    IDENTIFICADOR  shift, and go to state 19

    librerias                go to state 20
    libreria                 go to state 21
    codigo_libreria          go to state 22
    exportaciones            go to state 23
    declaracion              go to state 24
    declaraciones            go to state 25
    declaracion_objeto       go to state 26
    declaracion_tipo         go to state 27
    declaracion_subprograma  go to state 28
    identificadores          go to state 29


State 12

    3 definicion_programa: PROGRAMA IDENTIFICADOR ';' . codigo_programa

    DE             shift, and go to state 14
    IMPORTAR       shift, and go to state 16
    PRINCIPIO      shift, and go to state 30
    SUBPROGRAMA    shift, and go to state 17
    TIPO           shift, and go to state 18
    IDENTIFICADOR  shift, and go to state 19

    codigo_programa          go to state 31
    librerias                go to state 32
    libreria                 go to state 21
    declaracion              go to state 24
    declaraciones            go to state 33
    declaracion_objeto       go to state 26
    declaracion_tipo         go to state 27
    declaracion_subprograma  go to state 28
    identificadores          go to state 29
    cuerpo_subprograma       go to state 34


State 13

   21 codigo_libreria: error . ';'

    ';'  shift, and go to state 35


State 14

   11 libreria: DE . LIBRERIA nombre IMPORTAR identificadores ';'

    LIBRERIA  shift, and go to state 36


State 15

   22 exportaciones: EXPORTAR . nombres ';'

    IDENTIFICADOR  shift, and go to state 37

    nombre   go to state 38
    nombres  go to state 39


State 16

    9 libreria: IMPORTAR . LIBRERIA nombre ';'
   10         | IMPORTAR . LIBRERIA nombre COMO IDENTIFICADOR ';'

    LIBRERIA  shift, and go to state 40


State 17

   97 declaracion_subprograma: SUBPROGRAMA . cabecera_subprograma cuerpo_subprograma SUBPROGRAMA

    error          shift, and go to state 41
    IDENTIFICADOR  shift, and go to state 42

    cabecera_subprograma  go to state 43


State 18

   32 declaracion_tipo: TIPO . IDENTIFICADOR ES tipo_no_estructurado ';'
   33                 | TIPO . IDENTIFICADOR ES tipo_estructurado

    IDENTIFICADOR  shift, and go to state 44


State 19

  110 identificadores: IDENTIFICADOR .

    $default  reduce using rule 110 (identificadores)


State 20

    8 librerias: librerias . libreria
   19 codigo_libreria: librerias . declaraciones
   20                | librerias . exportaciones declaraciones

    DE             shift, and go to state 14
    EXPORTAR       shift, and go to state 15
    IMPORTAR       shift, and go to state 16
    SUBPROGRAMA    shift, and go to state 17
    TIPO           shift, and go to state 18
    IDENTIFICADOR  shift, and go to state 19

    libreria                 go to state 45
    exportaciones            go to state 46
    declaracion              go to state 24
    declaraciones            go to state 47
    declaracion_objeto       go to state 26
    declaracion_tipo         go to state 27
    declaracion_subprograma  go to state 28
    identificadores          go to state 29


State 21

    7 librerias: libreria .

    $default  reduce using rule 7 (librerias)


State 22

   16 definicion_libreria: LIBRERIA IDENTIFICADOR ';' codigo_libreria .

    $default  reduce using rule 16 (definicion_libreria)


State 23

   18 codigo_libreria: exportaciones . declaraciones

    SUBPROGRAMA    shift, and go to state 17
    TIPO           shift, and go to state 18
    IDENTIFICADOR  shift, and go to state 19

    declaracion              go to state 24
    declaraciones            go to state 48
    declaracion_objeto       go to state 26
    declaracion_tipo         go to state 27
    declaracion_subprograma  go to state 28
    identificadores          go to state 29


State 24

   26 declaraciones: declaracion .

    $default  reduce using rule 26 (declaraciones)


State 25

   17 codigo_libreria: declaraciones .
   27 declaraciones: declaraciones . declaracion

    SUBPROGRAMA    shift, and go to state 17
    TIPO           shift, and go to state 18
    IDENTIFICADOR  shift, and go to state 19

    $default  reduce using rule 17 (codigo_libreria)

    declaracion              go to state 49
    declaracion_objeto       go to state 26
    declaracion_tipo         go to state 27
    declaracion_subprograma  go to state 28
    identificadores          go to state 29


State 26

   23 declaracion: declaracion_objeto .

    $default  reduce using rule 23 (declaracion)


State 27

   24 declaracion: declaracion_tipo .

    $default  reduce using rule 24 (declaracion)


State 28

   25 declaracion: declaracion_subprograma .

    $default  reduce using rule 25 (declaracion)


State 29

   28 declaracion_objeto: identificadores . ':' CONSTANTE especificacion_tipo ASIGNACION expresion ';'
   29                   | identificadores . ':' especificacion_tipo ASIGNACION expresion ';'
  111 identificadores: identificadores . ',' IDENTIFICADOR

    ','  shift, and go to state 50
    ':'  shift, and go to state 51


State 30

  115 cuerpo_subprograma: PRINCIPIO . bloque_instrucciones FIN

    error          shift, and go to state 52
    CASOS          shift, and go to state 53
    DEVOLVER       shift, and go to state 54
    LANZA          shift, and go to state 55
    MIENTRAS       shift, and go to state 56
    PARA           shift, and go to state 57
    PRUEBA         shift, and go to state 58
    REPETIR        shift, and go to state 59
    SALIR          shift, and go to state 60
    SI             shift, and go to state 61
    SIGUIENTE      shift, and go to state 62
    IDENTIFICADOR  shift, and go to state 63
    ';'            shift, and go to state 64

    nombre                             go to state 65
    bloque_instrucciones               go to state 66
    instruccion                        go to state 67
    instruccion_asignacion             go to state 68
    instruccion_devolver               go to state 69
    instruccion_llamada                go to state 70
    llamada_subprograma                go to state 71
    instruccion_si                     go to state 72
    instruccion_casos                  go to state 73
    instruccion_bucle                  go to state 74
    clausula_iteracion                 go to state 75
    instruccion_interrupcion           go to state 76
    instruccion_lanzamiento_excepcion  go to state 77
    instruccion_captura_excepcion      go to state 78
    objeto                             go to state 79


State 31

    3 definicion_programa: PROGRAMA IDENTIFICADOR ';' codigo_programa .

    $default  reduce using rule 3 (definicion_programa)


State 32

    6 codigo_programa: librerias . cuerpo_subprograma
    8 librerias: librerias . libreria

    DE             shift, and go to state 14
    IMPORTAR       shift, and go to state 16
    PRINCIPIO      shift, and go to state 30
    SUBPROGRAMA    shift, and go to state 17
    TIPO           shift, and go to state 18
    IDENTIFICADOR  shift, and go to state 19

    libreria                 go to state 45
    declaracion              go to state 24
    declaraciones            go to state 33
    declaracion_objeto       go to state 26
    declaracion_tipo         go to state 27
    declaracion_subprograma  go to state 28
    identificadores          go to state 29
    cuerpo_subprograma       go to state 80


State 33

   27 declaraciones: declaraciones . declaracion
  116 cuerpo_subprograma: declaraciones . PRINCIPIO bloque_instrucciones FIN

    PRINCIPIO      shift, and go to state 81
    SUBPROGRAMA    shift, and go to state 17
    TIPO           shift, and go to state 18
    IDENTIFICADOR  shift, and go to state 19

    declaracion              go to state 49
    declaracion_objeto       go to state 26
    declaracion_tipo         go to state 27
    declaracion_subprograma  go to state 28
    identificadores          go to state 29


State 34

    5 codigo_programa: cuerpo_subprograma .

    $default  reduce using rule 5 (codigo_programa)


State 35

   21 codigo_libreria: error ';' .

    $default  reduce using rule 21 (codigo_libreria)


State 36

   11 libreria: DE LIBRERIA . nombre IMPORTAR identificadores ';'

    IDENTIFICADOR  shift, and go to state 37

    nombre  go to state 82


State 37

   12 nombre: IDENTIFICADOR .

    $default  reduce using rule 12 (nombre)


State 38

   13 nombre: nombre . CUATRO_PUNTOS IDENTIFICADOR
   14 nombres: nombre .

    CUATRO_PUNTOS  shift, and go to state 83

    $default  reduce using rule 14 (nombres)


State 39

   15 nombres: nombres . ',' nombre
   22 exportaciones: EXPORTAR nombres . ';'

    ';'  shift, and go to state 84
    ','  shift, and go to state 85


State 40

    9 libreria: IMPORTAR LIBRERIA . nombre ';'
   10         | IMPORTAR LIBRERIA . nombre COMO IDENTIFICADOR ';'

    IDENTIFICADOR  shift, and go to state 37

    nombre  go to state 86


State 41

  102 cabecera_subprograma: error . ';'

    ';'  shift, and go to state 87


State 42

   98 cabecera_subprograma: IDENTIFICADOR .
   99                     | IDENTIFICADOR . parametrizacion
  100                     | IDENTIFICADOR . tipo_resultado
  101                     | IDENTIFICADOR . parametrizacion tipo_resultado

    DEVOLVER  shift, and go to state 88
    '('       shift, and go to state 89

    $default  reduce using rule 98 (cabecera_subprograma)

    parametrizacion  go to state 90
    tipo_resultado   go to state 91


State 43

   97 declaracion_subprograma: SUBPROGRAMA cabecera_subprograma . cuerpo_subprograma SUBPROGRAMA

    PRINCIPIO      shift, and go to state 30
    SUBPROGRAMA    shift, and go to state 17
    TIPO           shift, and go to state 18
    IDENTIFICADOR  shift, and go to state 19

    declaracion              go to state 24
    declaraciones            go to state 33
    declaracion_objeto       go to state 26
    declaracion_tipo         go to state 27
    declaracion_subprograma  go to state 28
    identificadores          go to state 29
    cuerpo_subprograma       go to state 92


State 44

   32 declaracion_tipo: TIPO IDENTIFICADOR . ES tipo_no_estructurado ';'
   33                 | TIPO IDENTIFICADOR . ES tipo_estructurado

    ES  shift, and go to state 93


State 45

    8 librerias: librerias libreria .

    $default  reduce using rule 8 (librerias)


State 46

   20 codigo_libreria: librerias exportaciones . declaraciones

    SUBPROGRAMA    shift, and go to state 17
    TIPO           shift, and go to state 18
    IDENTIFICADOR  shift, and go to state 19

    declaracion              go to state 24
    declaraciones            go to state 94
    declaracion_objeto       go to state 26
    declaracion_tipo         go to state 27
    declaracion_subprograma  go to state 28
    identificadores          go to state 29


State 47

   19 codigo_libreria: librerias declaraciones .
   27 declaraciones: declaraciones . declaracion
